Fix: add gap in form contact

--- a/src/app/[locale]/components/contact/index.scss
+++ b/src/app/[locale]/components/contact/index.scss
@@ -41,7 +41,7 @@
       .form{
           display: flex;
           flex-direction: column;
-          gap: 1rem;
+          gap: 2rem;
           margin-right: 2rem;
           margin-top: 2rem;
           width: 50%;
